--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       name: '',
       repo: '',
       coverpage: true,
-      loadNavbar: true
+      loadNavbar: true,
+      loadSidebar: true,
+      subMaxLevel: 3
     }
   </script>
   <!-- Docsify v4 -->
