--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
       loadSidebar: true,
       subMaxLevel: 9,     //菜单栏显示目录的层数
       // auto2top: true,  // 切换显示的文档时，自动跳转到页面顶部
+      search: {         //搜索功能
+      maxAge: 86400000, // Expiration time, the default one day
+      paths: 'auto',
+      placeholder: '🔍 Type to search ',
+      noData: '😞 No Results! ',
+      depth: 6
+      }
     }
   </script>
+  <!-- 搜索功能 -->
+  <script src="//cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
