--- a/DemoCode/L01.html
+++ b/DemoCode/L01.html
@@ -64,9 +64,28 @@
         // var a = !(1>2);
         // console.log(a);
         // console.log('' && 1 + 2 && 45 * 10000);  // 
-        var age = 15;
-        age += 15;  //  age = age + 15;
-        console.log(age);
+        // var age = 15;
+        // age += 15;  //  age = age + 15;
+        // console.log(age);
+        // if (3 < 5) {
+        //     console.log('撒旦发生的发');
+        // }
+        // var age = prompt('....');
+        // if (age >= 18) {
+        //     document.write('可以进入网吧');
+        // }
+        // var fenshu = prompt('....');
+        // if (fenshu >= 90 ) {
+        //     console.log('90分以上的');
+        // } 
+        // else if(fenshu >=80){
+        //     console.log('80........');
+        // }else{
+        //     console.log('这分数,别上了');
+        // }
+        var num = 10;
+        var re = 10 < 5 ?'真的': '假的';
+        console.log(re);
     </script>
 </body>
 </html>
