--- a/DemoCode/S01.html
+++ b/DemoCode/S01.html
@@ -139,12 +139,93 @@
         var re = num > 5 ? '是的' : '不是的'; //10>5,为真，返回表达式1的值。
         console.log(re);
     </script> -->
-    <script>
+    <!-- <script>
         var num = 10;
         if(num > 5 ){
             console.log('正确');
         }else{
             console.log('错误');
+        }
+    </script> -->
+    <!-- <script>
+        switch (4) {
+            case 1:
+                console.log('这是1');
+                break;
+            case 2:
+                console.log('这是2');
+            case 3:
+                console.log('这是3');
+            default:
+                console.log('啥都不是');
+        }
+    </script> -->
+    <!-- <script>
+        //switch注意事项
+        var num = 1;
+        switch (num) {
+            case 1:
+                console.log(1);
+                break;
+            case 2:
+                console.log(2);
+                break;
+            default:
+                console.log(3);
+        }
+        //1.开发里面，表达式我们经常写变量。
+        //2.我们num的值和case里面的值相匹配的时候是 全等 === ，必须是值和数据类型一直才可以 num === 1;
+        //3.break如果当前的case里面没有break ，则不会推迟switch，会执行下一个case。
+    </script> -->
+    <!-- <script>
+        // 1、弹出promet输入框，让用户输入水果名称，把这个值取过来保存变量。
+
+        // 2、将这个变量作为switch括号里面的表达式。
+
+        // 3、case后面的值写几个不同的水果名称，注意一定要加引号，因为是全等匹配。
+
+        // 4、弹出不同的价格即可。同样注意每个case之后加上break，需要退出switch语句。
+
+        // 5、将default设置为没有无。
+        var fruit = prompt('输入水果名称');
+        switch (fruit) {
+            case '苹果':
+                console.log('apple price is 3.5/500g');
+                break;
+            case '榴莲':
+                console.log('榴莲不好吃');
+            default:
+                alert('抱歉，只有两个水果。');
+        }
+    </script> -->
+    <!-- <script>
+        //循环的目的：可以重复执行某些代码。
+        console.log('哈哈哈');
+        console.log('哈哈哈');
+        console.log('哈哈哈');
+        console.log('哈哈哈');
+        console.log('哈哈哈');
+        console.log('--------------------------');
+        for(var i = 1;i <= 100; i++){
+            console.log('哈哈哈');
+        }
+    </script> -->
+    <!-- <script>
+        //for 语法结构
+        // for(初始化变量;条件表达式;操作表达式){
+        //     //循环体
+        // }
+        //1、初始化变量，使用var声明的一个普通变量，通常用于作为计数器使用
+        //2、条件表达式，用来决定每一次循环是否继续执行，简单来说是终止条件。
+        //3、操作表达式，每次循环最后执行的代码，通常用于计数器变量进行更新（递增或者递减）
+        //4、代码演示，循环100句，hello world
+        for(var i=1;i<=100;i++){
+            console.log('hello world');
+        }
+    </script> -->
+    <script>
+        for(var i=1;i<=100;i++){
+            console.log('hello world');
         }
     </script>
 </body>
