--- a/DemoCode/L01.html
+++ b/DemoCode/L01.html
@@ -83,9 +83,66 @@
         // }else{
         //     console.log('这分数,别上了');
         // }
-        var num = 10;
-        var re = 10 < 5 ?'真的': '假的';
-        console.log(re);
+        // var num = 10;
+        // var re = 10 < 5 ?'真的': '假的';
+        // console.log(re);
+    </script>
+    <script>
+        // switch ('2') {
+        //     case 1:
+        //         console.log('这是1');
+        //         break;
+        //     case 2:
+        //         console.log('这是2');
+        //         break;
+        //     case 3:
+        //         console.log('这是3');
+        //         break;
+        //     default:
+        //         console.log('啥都不是');
+        // }
+        // console.log('123123123');
+        // console.log('123123123');
+        // console.log('123123123');
+        // console.log('123123123');
+        // console.log('123123123');
+        // console.log('123123123');
+        // for(var i = 1; i <= 100;i++){
+        //     console.log('123123123');
+        // }
+        // for(var i = 1;i <= 100; i++ ){
+        //     console.log('哈哈哈');
+        // }
+    </script>
+    <script>
+        // // for(var i = 1;i <= 100; i++){
+        // //     console.log('哈哈哈');
+        // // }
+        // for(var i = 1;i < 100 ;i++){
+        //     if(i == 1){
+        //         console.log('1岁刚出生');
+        //     }else if(i == 99){
+        //         console.log('真棒，活到了99岁了呢');
+        //     }else{
+        //         console.log('我今年是'+ i +'岁');
+        //     }
+        // }
+        // for(vasdf1);
+    </script>
+    <script>
+        // var a = prompt('....');
+        // for(var i = 1;i <=a; i++){
+        //     console.log('....');
+        // }
+        for(var a =1;a<100;a++){
+            if(a == 1){
+                console.log('1岁');
+            }else if(a == 99){
+                console.log('99岁');
+            }else{
+                console.log('这是我的岁数' + a +',哈哈哈');
+            }
+        }
     </script>
 </body>
 </html>
