--- a/DemoCode/L02.html
+++ b/DemoCode/L02.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <script>
+        var a = '张鹏飞';
+        //  alert(a);
+    </script> -->
+    <!-- <script>
+        // 声明变量赋值为20
+        var age = 20;
+        age = 30;
+        console.log(age);
+        var myname = '这是我的名字';
+        console.log(myname);
+    </script> -->
+    <!-- <script>
+        var c = 'this is a \'\'';    //这是一个'字符串'文本
+        console.log(c);
+    </script> -->
+    <!-- <script>
+        var a = "这是一个字符串，一共有15个字";     //15
+        console.log(a.length);
+    </script> -->
+    <!-- <script>
+        console.log('这是一个字符串'+'后面加了一串字'); //这是一个字符串后面加了一串字
+        console.log('字符串'+100);//字符串110
+        //数值类型+数值类型
+        console.log(100+100);   //200
+        //数字的字符串+数值类型
+        console.log('100'+100); //100100
+    </script> -->
+    <script>
+        var a = 1;
+        do{
+        console.log('我今年'+a+'岁了')
+        a++
+        }while(a <= 10)
+    </script>
     
 </body>
 </html>
