--- a/DemoCode/L01.html
+++ b/DemoCode/L01.html
@@ -297,7 +297,7 @@
         }
     </script>
      -->
-     <script>
+     <!-- <script>
         for (var i = 1; i <= 5; i++) {
             if (i == 3) {
                 console.log('这个包子有虫子，扔掉,后面的我也不吃了。。。。');
@@ -305,6 +305,6 @@
             }
             console.log('我正在吃第' + i + '个包子呢');
         }
-    </script>
+    </script> -->
 </body>
 </html>
