--- a/DemoCode/S01.html
+++ b/DemoCode/S01.html
@@ -619,7 +619,7 @@
         }
         console.log(newArr);
     </script> -->
-    <script>
+    <!-- <script>
         // 案例1：删除指定数组元素（数组去重），将数组[2, 0, 6, 1, 77, 0, 52, 0, 25, 7]中的 0 去掉后，形成一个不包含 0 的新数组。
         var arr = [2, 0, 6, 1, 77, 0, 52, 0, 25, 7];
         // 创建空的新数组，用来储存不包含0的新数组
@@ -633,6 +633,6 @@
             }
         }
         console.log(newArr);    //for循环第一次循环，遍历出了，2,依次类推，将不包含0的元素排除掉即可。
-    </script>  
+    </script>   -->
 </body>
 </html>
