--- a/DemoCode/S01.html
+++ b/DemoCode/S01.html
@@ -634,5 +634,207 @@
         }
         console.log(newArr);    //for循环第一次循环，遍历出了，2,依次类推，将不包含0的元素排除掉即可。
     </script>   -->
+    <!-- <script>
+        // 案例2：将数组 ['red','green','blue','pink'] 的内容翻过来存放。
+        // 1、声明一个新数组 
+        // 2、需要把旧数组索引号第3个取过来 （arr.length - 1）——>数组长度减1，给新数组索引号第0个元素（newArr.length）
+        // 3、因为需要需要翻转数组，索引是从3,2,1,0 依次递减的。所以需要采用 i-- 的方式。从3-2-1-0
+        var arr = ['red','green','blue','pink'];
+        var newArr = [];
+        for(var i = arr.length - 1;i >= 0;i--){
+            newArr[newArr.length] = arr[i];
+        }
+        console.log(newArr);
+    </script> -->
+    <!-- <script>
+        var a = 100;
+        var b = 1000;
+        var temp;
+        temp = a;
+        a = b;
+        b = temp;
+        console.log(a,b);
+    </script> -->
+    <!-- <script>
+        // 冒泡排序
+        var arr = [5,4,2,1,3];
+        for(var i = 0; i <= arr.length - 1;i++){    //外循环一次
+            for(var j = 0;j <= arr.length - i - 1;j++){     //内循环全部执行
+                if(arr[j] < arr[j+1]){
+                    var temp = arr[i];
+                    arr[j] = arr[j+1]
+                    arr[j+1] = temp;
+                }
+            }
+        }
+    </script> -->
+    <!-- <script>
+        // 1、求1~100的累加和
+        var sum = 0;
+        for(var i = 1;i <= 100; i++){
+            sum = sum + i;
+            // sum += i;
+        }
+        console.log(sum);
+        // 2、求10~50的累加和
+        var sum = 0;
+        for(var i = 10;i <= 50;i++){
+            sum += i ;
+        }
+        console.log(sum);
+
+        // 3、使用函数,通过封装的方法将一段可以重复调用的代码块，进行重复使用。
+        function getSum(num1,num2) {
+            var sum = 0;
+            for(var i = num1;i <= num2;i++){
+                sum += i ;
+            }
+            console.log(sum);
+        }
+        getSum(1,2);    //3
+        getSum(3,7);    //25
+    </script> -->
+    <!-- <script>
+        // 声明函数
+        function 函数名(){
+            //函数体代码
+        }
+    </script> -->
+    <!-- <script>
+        function hh() {
+            console.log('hello world');
+        }
+        hh();
+    </script> -->
+    <!-- <script>
+        function getSum() {
+            var sum = 0;
+            for(var i = 1;i <= 100; i++){
+                sum = sum + i;
+                // sum += i;
+            }
+            console.log(sum);
+        }
+        getSum();
+    </script> -->
+    <!-- <script>
+        //声明函数
+        function 函数名(形参1,形参2,形参3....){
+
+        }
+        // 调用函数
+        函数名(实参1,实参2,实参3);
+    </script> -->
+    <!-- <script>
+        function look(aru,aru2) {       //形参是接受实参的，aru = '内容',形参类似于一个变量
+            console.log(aru,aru2);
+        }
+        look('这就是实参，aru这个就是形参，形参和实参都是可以自定义的。','呐，这是第二个实参');
+        look('实参是可以变的，你看我现在就输出的是另外的内容。','呐,呐，呐。');
+    </script> -->
+    <!-- <script>
+        function getboth(a,b) {
+            console.log(a+b);
+        }
+        getboth(1,2);
+    </script> -->
+    <!-- <script>
+        function getSum(start,end){
+            sum = 0;
+            for(var a = start;a <= end; a++){
+                sum += a;
+            }
+            console.log(sum);
+        }
+        getSum(1,3)
+    </script> -->
+    <!-- <script>
+        function sum(num1, num2) {
+            console.log(num1 + num2);
+        }
+        sum(100, 200);             // 300，形参和实参个数相等，输出正确结果
+
+        sum(100, 400, 500, 700);   // 500，实参个数多于形参，只取到形参的个数
+
+        sum(200);                  // 实参个数少于形参，多的形参定义为undefined，结果为NaN
+    </script> -->
+    <!-- <script>
+        // 声明函数
+        function 函数名（）{
+            ...
+            return  需要返回的值;
+        }
+        // 调用函数
+        函数名();    // 此时调用函数就可以得到函数体内return 后面的值
+    </script> -->
+    <!-- <script>
+        // 声明函数
+        function sum(){
+            return  666;
+        }
+        // 调用函数
+        console.log(sum());     // 此时 sum 的值就等于666，因为 return 语句会把自身后面的值返回给调用者 
+        
+        function sum1(num1,num2){
+            return num1+num2;
+        }
+        console.log(sum1(1,2));
+    </script> -->
+    <!-- <script>
+        function getmax(a,b) {
+            if(a > b){
+                return a;
+            }else{
+                return b;
+            }
+            // return a > b ? a : b;   //三元表达式写法
+        }
+        console.log(getmax(3,10));
+    </script> -->
+    <!-- <script>
+        // 利用函数求数组[5,2,99,101,67,77] 中的最大数值
+        function getArrMax(arr) {    //形参，接受一个数组
+            var max = arr[0];
+            for(var i = 1;i <=arr.length; i++){
+                if(arr[i] > max){
+                    max = arr[i];
+                }
+            }
+            return max;
+        }
+        // console.log(getArrMax([5,2,99,101,67,77]));     //实参，传一个数组过去
+        var re = getArrMax([5,2,99,101,67,77]);         //通过变量的方式将 调用函数，保存起来
+        console.log(re);    //输出变量
+    </script> -->
+    <!-- <script>
+        function add(num1,num2){
+            //函数体
+            return num1 + num2; // 注意：return 后的代码不执行
+            alert('我不会被执行，因为前面有 return');
+        }
+        var resNum = add(21,6); // 调用函数，传入两个实参，并通过 resNum 接收函数返回值
+        alert(resNum);          // 27
+    </script> -->
+    <!-- <script>
+        function add(num1,num2){
+            //函数体
+            return num1,num2;
+        }
+        var resNum = add(21,6); // 调用函数，传入两个实参，并通过 resNum 接收函数返回值
+        alert(resNum);          // 6
+    </script> -->
+    <!-- <script>
+        function getfn(num1,num2){
+            return [num1 + num2,num1 - num2,num1 * num2,num1 / num2];
+        }
+        var re = getfn(1,2);
+        console.log(re);
+    </script> -->
+    <!-- <script>
+        function fun() {
+            
+        }
+        console.log(fun());     //undefined
+    </script> -->
 </body>
 </html>
