--- a/DemoCode/L01.html
+++ b/DemoCode/L01.html
@@ -470,7 +470,7 @@
         }
         console.log(newArr);
     </script> -->
-    <script>
+    <!-- <script>
         // 案例1：删除指定数组元素（数组去重），将数组[2, 0, 6, 1, 77, 0, 52, 0, 25, 7]中的 0 去掉后，形成一个不包含 0 的新数组。
         var arr = [2, 0, 6, 1, 77, 0, 52, 0, 25, 7];
         // 创建空的新数组，用来储存不包含0的新数组
@@ -484,6 +484,59 @@
             }
         }
         console.log(newArr);    //for循环第一次循环，遍历出了，2,依次类推，将不包含0的元素排除掉即可。
-    </script>  
+    </script>   -->
+    <!-- <script>
+        // 1、求1~100的累加和
+        var sum = 0;
+        for(var i = 1;i <= 100; i++){
+            sum = sum + i;
+            // sum += i;
+        }
+        console.log(sum);
+        // 2、求10~50的累加和
+        var sum = 0;
+        for(var i = 10;i <= 50;i++){
+            sum += i ;
+        }
+        console.log(sum);
+
+        // 3、使用函数,通过封装的方法将一段可以重复调用的代码块，进行重复使用。
+        function getSum(num1,num2) {
+            var sum = 0;
+            for(var i = num1;i <= num2;i++){
+                sum += i ;
+            }
+            console.log(sum);
+        }
+        getSum(1,2);    //3
+        getSum(3,7);    //25
+    </script> -->
+    <!-- <script>
+        // // 声明函数
+        // function 函数名(){
+        //     //函数体代码
+        // }
+
+        // //调用函数
+        // 函数名();	//通过调用函数名来执行函数题代码
+
+        function myname() {
+            console.log('hhhh');
+        }
+        myname();
+    </script> -->
+    <script>
+        function getSum() {
+            var sum = 0;
+            for(var i = 1;i <= 100; i++){
+                sum = sum + i;
+                // sum += i;
+            }
+            console.log(sum);
+        }
+        getSum();
+        getSum();
+        getSum();
+    </script>
 </body>
 </html>
